argocd/platform/kafka/kafka-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafka-ui
  namespace: kafka
  labels:
    app: kafka-ui
    app.kubernetes.io/name: kafka-ui
spec:
  host: kafka-ui.apps.lab.ocp.lan
  to:
    kind: Service
    name: kafka-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
